--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,30 @@
 version: '3'
 
 services:
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/code
+  webserver:
+    image: nginx:alpine
+    container_name: webserver_01
     ports:
-      - "8000:8000"
+      - "80:80"
+    volumes:
+      - ./webserver/nginx:/etc/nginx/conf.d
+    depends_on:
+      - backend
+    restart: always
+
+  backend:
+    container_name: backend_01
+    build:
+      context: ./backend
+      args:
+        REPO_KEY: $BITBUCKET_KEY
+        REPO_SECRET: $BITBUCKET_SECRET
+    env_file: backend/env.list
+    environment:
+      SERVER_IP: $IP_ADDRESS
+      SERVER_PORT: "8000"
+    # volumes:
+      # - .:/code
+    expose:
+      - "8000" #must be identical to SERVER_PORT
+    restart: always
