--- a/webserver/nginx/api.conf
+++ b/webserver/nginx/api.conf
@@ -7,6 +7,12 @@ upstream be {
     # the port must match backend SERVER_PORT
     server backend:8000;
 }
+
+upstream news {
+    ip_hash;
+    server news:2368;
+}
+
 map $http_user_agent $allowed_bots {
      default 0;
      ~*(google|bing|yandex|msnbot) 1;
@@ -30,5 +36,20 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Cluster-Client-Ip $remote_addr;
         proxy_pass http://be;
+    }
+}
+
+server {
+    listen 2368 default_server;
+    server_name _; # catch all names
+    charset utf-8;
+
+    location / {
+        allow all;
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Cluster-Client-Ip $remote_addr;
+        proxy_pass http://news;
     }
 }
