--- a/webserver/prod.sites.d/api.khambacsi.com.conf
+++ b/webserver/prod.sites.d/api.khambacsi.com.conf
@@ -21,17 +21,16 @@ map $http_user_agent $allowed_bots {
 
 server {
     listen 80;
-    server_name _; # catch all names
-    # server_name api.khambacsi.com;
+    # server_name _; # catch all names
+    server_name api.khambacsi.com;
     charset utf-8;
 
     set $disallowed 0;
     location / {
         valid_referers khambacsi.com  *.khambacsi.com ~\.google\. ~\.yahoo\. ~\.bing\. ~\.facebook\.;
-        # temporary disable referer restrictions
-        # if ($invalid_referer){
-        #     set $disallowed 1;
-        # }
+        if ($invalid_referer){
+            set $disallowed 1;
+        }
         if ($allowed_bots){
             set $disallowed 0;
         }
