--- a/webserver/prod.sites.d/news.khambacsi.com.conf
+++ b/webserver/prod.sites.d/news.khambacsi.com.conf
@@ -5,9 +5,9 @@ upstream news {
 }
 
 server {
-    listen 2368;
-    server_name _; # catch all names
-    # server_name news.khambacsi.com www.news.khambacsi.com; # catch all names
+    listen 80;
+    # server_name _; # catch all names
+    server_name news.khambacsi.com www.news.khambacsi.com; # catch all names
     charset utf-8;
 
     location / {
