--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,21 +3,61 @@ version: '3'
 services:
   webserver:
     image: nginx:alpine
-    container_name: webserver_01
+    container_name: webserver_prod
     ports:
       - "80:80"
     volumes:
-      - $WORKING_DIR/webserver/nginx:/etc/nginx/conf.d
+      - $WORKING_DIR/webserver/prod.sites.d:/etc/nginx/conf.d:ro
     depends_on:
+      - news
       - backend
     restart: always
 
+
   backend:
-    image: us.gcr.io/web-host-196219/kbsdocker_backend:latest
+    container_name: backend_prod
+    image: us.gcr.io/web-host-196219/kbsdocker_backend
     env_file: backend/env.list
     environment:
       SERVER_IP: $IP_ADDRESS
       SERVER_PORT: "8000"
     expose:
       - "8000" #must be identical to SERVER_PORT
+    restart: always
+
+  news:
+    image: ghost:1-alpine
+    container_name: news_prod
+    volumes:
+      # binding minimal persisted data only
+      - $WORKING_DIR/news/ghost/content/adapters:/var/lib/ghost/content/adapters
+      # this is to make it possible to commit the sqlite database
+      # not recommended for scalability reasons or obviously when moving to server - client databases
+      - $WORKING_DIR/news/persistent/db/data:/var/lib/ghost/content/data
+      # - $WORKING_DIR/news/ghost/content/data:/var/lib/ghost/content/data
+      - $WORKING_DIR/news/ghost/content/logs:/var/lib/ghost/content/logs
+    env_file: news/env.list
+    environment:
+      # url: http://0.0.0.0:2368
+      # server__host: "0.0.0.0"
+      # server__port: "2368"
+
+      # database configs
+      database__client: sqlite3
+      database__connection__filename: "/var/lib/ghost/content/data/ghost.db"
+      database__useNullAsDefault: "true"
+      database__debug: "false"
+
+      # custom storage
+      storage__active: "s3"
+      storage__s3__bucket: "kbs-news"
+      storage__s3__region: "ap-southeast-1"
+      storage__s3__pathPrefix: "content/images"
+
+      # mail settings
+      mail__transport: "SES"
+      mail__from: "'Khambacsi Team' <khambacsi@gmail.com>"
+
+    expose:
+      - "2368"
     restart: always
