--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"
       - "2368:2368"
     volumes:
-      - $WORKING_DIR/webserver/prod.sites.d:/etc/nginx/conf.d:ro
+      - $WORKING_DIR/webserver/sites.d:/etc/nginx/conf.d:ro
     depends_on:
       - news
       - backend
@@ -42,7 +42,7 @@ services:
       - $WORKING_DIR/news/ghost/content/logs:/var/lib/ghost/content/logs
     env_file: news/env.list
     environment:
-      # url: http://0.0.0.0:2368
+      # url: http://news.khambacsi.com
       # server__host: "0.0.0.0"
       # server__port: "2368"
 
